language/move-lang/tests/move_check/parser/invalid_call_lhs_parens_around_name.move
module M {
    fun foo() {
        (foo)()
    }
}
